fixed queue and horizontal scroll

--- a/client/assets/css/employees.css
+++ b/client/assets/css/employees.css
@@ -13,8 +13,7 @@
 
 #doctors-table{
     height:32em;
-    overflow:scroll;
-    width:100%;
+		overflow-x: hidden;
 }
 
 #doctors-table td{
